[package]
name = "re_control_panel"

version.workspace = true
authors.workspace = true
edition.workspace = true


[dependencies]
bincode = { workspace = true }
mimalloc = { workspace = true }
re_crash_handler = { workspace = true }
re_sdk_comms = { workspace = true }
re_log = { workspace = true }
re_viewer = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
